# Monitorr-II

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
monitorr_ii/: __main__.py  app.py  auth.py  checks.py  config.py  icons.py  migration.py  poller.py  system.py
monitorr_ii/routes/: api.py  pages.py  settings.py
monitorr_ii/static/js/: clock.js  dashboard.js
monitorr_ii/templates/: base.html  dashboard.html  login.html  settings.html
monitorr_ii/templates/partials/: services_grid.html  system_badges.html
