[project]
name = "monitorr-ii"
version = "0.1.0"
description = "Python rewrite of the Monitorr service-status dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "psutil>=6.0",
    "pydantic>=2.7",
    "itsdangerous>=2.2",
    "bcrypt>=4.0,<5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monitorr_ii"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
